--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -5,7 +5,18 @@
    "id": "570688a9",
    "metadata": {},
    "source": [
-    "# 1. Download/Load SP500 stocks prices data."
+    "## Unsupervised Learning Trading Strategy\n",
+    "- Download/Load SP500 stocks prices data.\n",
+    "- Calculate different features and indicators on each stock.\n",
+    "- Aggregate on monthly level and filter top 150 most liquid stocks.\n",
+    "- Calculate Monthly Returns for different time-horizons.\n",
+    "- Download Fama-French Factors and Calculate Rolling Factor Betas.\n",
+    "- For each month fit a K-Means Clustering Algorithm to group similar assets based on their features.\n",
+    "- For each month select assets based on the cluster and form a portfolio based on Efficient Frontier max sharpe ratio optimization.\n",
+    "- Visualize Portfolio returns and compare to SP500 returns.\n",
+    "### All Packages Needed:\n",
+    "- pandas, numpy, matplotlib, statsmodels, pandas_datareader, datetime, yfinance, sklearn, PyPortfolioOpt\n",
+    "## 1. Download/Load SP500 stocks prices data."
    ]
   },
   {
